--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,14 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.0"
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.chs.readytonote"
         minSdkVersion 26
