--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Activity KTX
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    //coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
-    // coroutine lifecycle
+    // Coroutine lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     // Room
