--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,16 +49,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //Ktx
+    // Ktx
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.activity:activity-ktx:1.3.6'
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // DataStore
-
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    // Coroutine lifecycle
 
+    // Coroutine lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
@@ -67,8 +66,6 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
-    // Glide
-
-    implementation "com.github.bumptech.glide:glide:4.11.0"
-    kapt "com.github.bumptech.glide:compiler:4.11.0"
+    //Coil
+    implementation 'io.coil-kt:coil:1.3.2'
 }
