--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 30
@@ -13,6 +14,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
+        useIR = true
     }
 
     defaultConfig {
@@ -61,11 +63,16 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    // Room
 
+    // Room
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
+
     //Coil
     implementation 'io.coil-kt:coil:1.3.2'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha06"
 }
