--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
@@ -53,8 +53,8 @@ dependencies {
 
     // Ktx
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.activity:activity-ktx:1.3.6'
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha06'
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -73,6 +73,6 @@ dependencies {
     implementation 'io.coil-kt:coil:1.3.2'
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha06"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha06'
 }
