--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -20,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.chs.readytonote"
         minSdkVersion 28
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -42,10 +42,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.5.0-alpha02'
+    implementation 'com.google.android.material:material:1.5.0-alpha03'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -54,7 +54,7 @@ dependencies {
     // Ktx
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.activity:activity-ktx:1.3.1'
-    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha06'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha09'
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -73,6 +73,6 @@ dependencies {
     implementation 'io.coil-kt:coil:1.3.2'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha06'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha06'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-alpha09'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-alpha09'
 }
